--- a/interactive_calculator.html
+++ b/interactive_calculator.html
@@ -97,7 +97,7 @@
         <div class="range-slider">
             <input type="range" min="150000" max="2000000" value="500000" step="5000" class="slider" id="priceSlider">
             <div class="custom-thumb">
-                <img src="/image/slider image.jpg"  alt="Controller">
+                <img src="slider image.jpg"  alt="Controller">
             </div>
         </div>
         <div id="output"></div>
