--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div id="output"></div>
     </div>
-    <p class="note">*Our agents will list for 2% and sellers may choose to offer between 0% to 3% to the Buyer’s Agent. Sellers are not required to offer a Buyer’s Agent Commission. If you do offer a Buyer Agent Commission and a buyer calls on your house directly without an agent, our agents have agreed to do the entire transaction for only 2% total. Homes under $150,000 will have a minimum sell-side commission of $3,000 and may offer between 0% to 3% to the Buyer’s Agent.</p>
+    <p class="note">*Our agents charge a 2% fee for listing your property, and sellers can decide to offer the Buyer's Agent a commission between 0% and 3%. It's optional for sellers to provide a commission to the Buyer's Agent. If they do, and a buyer contacts them directly without an agent, our agents will handle the whole process for just a 2% fee. For homes priced under $150,000, there's a minimum commission of $3,000, and sellers can offer the Buyer's Agent a commission between 0% and 3%.</p>
   </div>
 
   <script>
