--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Selling Calculator</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,12 +23,12 @@
     }
 
     .container {
-      background-color: rgb(239, 236, 236);
-      padding: 20px;
-      max-width: 500px;
-      margin: 20px auto;
-      border-radius: 10px;
-    }
+  background-color: rgb(239, 236, 236);
+  padding: 20px;
+  max-width: 90%; /* Set a maximum width for the container */
+  margin: 20px auto;
+  border-radius: 10px;
+}
 
     .range-slider {
       position: relative;
